deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylinks
  labels:
    app.kubernetes.io/name: mylinks
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mylinks
